--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "mongoose-unique-validator": "^2.0.3",
+    "node-firefox": "^0.1.0",
     "python": "0.0.4",
     "underscore": "^1.10.2"
   }
